News searching and viewing

--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.1/dist/mini-default.min.css">
   </head>
+
   <body>
+    
+    <header>
+    <a href="#" class="logo">NY Times API</a>
+    <a href="#" class="button">FUNZ1</a>
+   </header>
+
+    <input id = "filterText" type="text">
+    <button id = "loadingButton">search</button>
+    <div id="results" class="collapse"></div>
     <script src="script.js"></script>
   </body>
+
 </html>
