--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
     
     <header class="sticky">
-    <a href="#" class="logo">NY Times API</a>
-    <a href="#" class="button">FUNCTION1</a>
-    <a href="#" class="button">FUNCTION2</a>
+    <a href="index.html" class="logo">NY Times API</a>
+    <a href="book.html" class="button">BOOK</a>
+    <a href="#" class="button">FILM</a>
     <a href="#" class="button">FUNCTION3</a>
    </header>
    
