Weekly bestsellers getting.

--- a/book.html
+++ b/book.html
@@ -17,31 +17,11 @@
     <a href="#" class="button">FILM</a>
     <a href="#" class="button">FUNCTION3</a>
    </header>
-   
-
-
-   <div class="container">
-                        <div class="row cols-sm-12 cols-md-10">
-                          <div class="col-md-offset-1">
-                                  <div class="section1">
-                                    <h1 class="title"> Search by word </h1>
-
-<div class="row">
-<div class="col-sm-12 col-md-8 col-lg-4 col-lg-offset-1">
     <input id = "filterText" type="text">
     <button id = "loadingButton">search</button>
-</div>
-</div>
 
     <div id="results" class="collapse"></div>
-    <script src="script.js"></script>
-
-                                  </div>
-                          </div>
-                        </div>
-   </div>
-
-   
+    <script src="book.js"></script>
   </body>
 
 </html>
