--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header class="sticky">
     <a href="index.html" class="logo">NY Times API</a>
     <a href="book.html" class="button">BOOK</a>
-    <a href="#" class="button">FILM</a>
-    <a href="#" class="button">FUNCTION3</a>
+    <a href="book.html" class="button">FILM</a>
+    <a href="film.html" class="button">FUNCTION3</a>
    </header>
    
 
@@ -24,12 +24,12 @@
                         <div class="row cols-sm-12 cols-md-10">
                           <div class="col-md-offset-1">
                                   <div class="section1">
-                                    <h1 class="title"> Search by word </h1>
+                                    <h1 class="title"> Latest News </h1>
 
 <div class="row">
 <div class="col-sm-12 col-md-8 col-lg-4 col-lg-offset-1">
     <input id = "filterText" type="text">
-    <button id = "loadingButton">search</button>
+    <button id = "loadingButton">Search</button>
 </div>
 
 <div class="col-sm-12 col-md-2 col-lg-2">
@@ -80,5 +80,7 @@
 
    
   </body>
-
+<footer>
+  <p>Website by Gianluca Consiglio and Lorenco Malaj © 2019</p>
+</footer>
 </html>
