--- a/book.html
+++ b/book.html
@@ -14,14 +14,27 @@
     <header class="sticky">
     <a href="index.html" class="logo">NY Times API</a>
     <a href="book.html" class="button">BOOK</a>
-    <a href="#" class="button">FILM</a>
-    <a href="#" class="button">FUNCTION3</a>
+    
    </header>
-    <input id = "filterText" type="text">
-    <button id = "loadingButton">search</button>
+    
 
+
+<div class="container">
+                        <div class="row cols-sm-12 cols-md-10">
+                          <div class="col-md-offset-1">
+                                  <div class="section1">
+                                    <h1 class="title"> Latest Books </h1>
+
+<input id = "filterText" type="text">
+    <button id = "loadingButton">Search by author</button>
     <div id="results" class="collapse"></div>
     <script src="book.js"></script>
+</div>
+                          </div>
+                        </div>
+</div>
   </body>
-
+<footer>
+  <p>Website by Lorenco Malaj and Gianluca Consiglio © 2019</p>
+</footer>
 </html>
